# eventdbxjs

./: Cargo.toml  LICENSE  README.md  browser.js  build.rs  eventdbx.wasi-browser.js  eventdbx.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  report.txt  simple-test.js
.github/: FUNDING.yml
.github/workflows/: CI.yml
__test__/: bench.spec.ts  docker-compose.yml  index.spec.ts
src/: lib.rs
src/plugin_api/: mod.rs  noise.rs
src/plugin_api/schemas/: control.capnp
