
[package]
authors = ["Patrick Thach <thachp@gmail.com>"]
edition = "2021"
name = "eventdbxjs"
version = "1.3.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.3.0"
capnp = "0.18"
capnp-futures = "0.18"
futures = "0.3"
sha2 = "0.10"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.napi]
version = "3.3.0"
features = ["serde-json","tokio_rt"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.snow]
version = "0.9"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread","macros","net","sync","time"]

[dependencies.tokio-util]
version = "0.7"
features = ["compat"]

[build-dependencies]
napi-build = "2"
capnpc = "0.18"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
